syntax = "proto3";

package ledger;

option go_package = "github.com/example/pci-infra/api/gen/ledger;ledgerpb";

service LedgerService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc Credit(CreditRequest) returns (CreditResponse);
  rpc Debit(DebitRequest) returns (DebitResponse);
  rpc Transfer(TransferRequest) returns (TransferResponse);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc Reconcile(ReconcileRequest) returns (ReconcileResponse);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc ValidateConsistency(ValidateConsistencyRequest) returns (ValidateConsistencyResponse);
}

message CreateAccountRequest {
  string account_number = 1;
  string account_type = 2; // asset, liability, equity, revenue, expense
  string name = 3;
  string currency_code = 4; // ISO 4217, e.g., USD
  string created_by = 5;
  map<string, string> metadata = 6;
}

message CreateAccountResponse {
  string account_id = 1;
  string account_number = 2;
  string account_type = 3;
  string name = 4;
  string currency_code = 5;
  bool is_active = 6;
  string created_at = 7;
  string created_by = 8;
  map<string, string> metadata = 9;
  double current_balance = 10;
}

message CreditRequest {
  string transaction_id = 1;
  string account_id = 2;
  double amount = 3;
  string description = 4;
  string reference_type = 5;
  string reference_id = 6;
  string currency_code = 7;
  string created_by = 8;
  map<string, string> metadata = 9;
}

message CreditResponse {
  bool success = 1;
  string entry_id = 2;
  string entry_number = 3;
  string transaction_id = 4;
  string account_id = 5;
  double amount = 6;
  string description = 7;
  string created_at = 8;
}

message DebitRequest {
  string transaction_id = 1;
  string account_id = 2;
  double amount = 3;
  string description = 4;
  string reference_type = 5;
  string reference_id = 6;
  string currency_code = 7;
  string created_by = 8;
  map<string, string> metadata = 9;
}

message DebitResponse {
  bool success = 1;
  string entry_id = 2;
  string entry_number = 3;
  string transaction_id = 4;
  string account_id = 5;
  double amount = 6;
  string description = 7;
  string created_at = 8;
}

message TransferRequest {
  string from_account_id = 1;
  string to_account_id = 2;
  double amount = 3;
  string description = 4;
  string currency_code = 5;
  string created_by = 6;
  string reference_type = 7;
  string reference_id = 8;
  map<string, string> metadata = 9;
}

message TransferResponse {
  bool success = 1;
  string transaction_id = 2;
  string debit_entry_id = 3;
  string credit_entry_id = 4;
  string from_account_id = 5;
  string to_account_id = 6;
  double amount = 7;
  string description = 8;
  string created_at = 9;
}

message GetBalanceRequest {
  string account_id = 1;
}

message GetBalanceResponse {
  string account_id = 1;
  double balance = 2;
  string currency_code = 3;
  string updated_at = 4;
}

message ReconcileRequest {
  string account_id = 1;
  string start_time = 2; // RFC3339 format
  string end_time = 3;   // RFC3339 format
}

message ReconcileResponse {
  repeated BalanceSnapshot snapshots = 1;
  bool has_drift = 2;
  double drift_amount = 3;
  string reconciliation_time = 4;
}

message BalanceSnapshot {
  string id = 1;
  string account_id = 2;
  string transaction_id = 3;
  string snapshot_time = 4;
  double balance_before = 5;
  double balance_after = 6;
  double balance_change = 7;
  string account_type = 8;
  string currency_code = 9;
  string entry_id = 10;
  string entry_type = 11; // debit, credit
  double amount = 12;
  string description = 13;
  string reference_type = 14;
  string reference_id = 15;
  string created_at = 16;
}

message ListAccountsRequest {
  string account_type = 1;
  bool is_active = 2;
  string currency_code = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message ListAccountsResponse {
  repeated Account accounts = 1;
  int32 total = 2;
}

message Account {
  string id = 1;
  string account_number = 2;
  string account_type = 3;
  string name = 4;
  string currency_code = 5;
  bool is_active = 6;
  string created_at = 7;
  string created_by = 8;
  map<string, string> metadata = 9;
  double current_balance = 10;
}

message GetAccountRequest {
  string account_number = 1;
  string account_id = 2;
}

message GetAccountResponse {
  Account account = 1;
}

message ValidateConsistencyRequest {
  string account_id = 1;
}

message ValidationResult {
  bool is_valid = 1;
  string validation_type = 2;
  string message = 3;
  string account_id = 4;
  string transaction_id = 5;
  string timestamp = 6;
  map<string, string> details = 7;
}

message ValidateConsistencyResponse {
  repeated ValidationResult results = 1;
  bool is_fully_valid = 2;
  int32 error_count = 3;
}